Fixing alignment of number (CSS)

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ label {
   line-height: initial;
   font-size: 1.3rem;
   border-radius: 2.25rem;
-  padding: 0.5rem 2.5rem;
+  padding: 0.5rem;
   margin: 0 0 0.5rem;
   font-weight: 700;
 }
